--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "e2e": "cypress open"
   },
   "dependencies": {
+    "@next/font": "^14.2.5",
     "chroma-js": "^2.4.2",
     "firebase": "^10.12.3",
     "next": "14.2.5",
