--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@next/font": "^14.2.5",
     "chroma-js": "^2.4.2",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.3",
     "next": "14.2.5",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
   },
