--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.5",
+    "axios": "^1.7.2",
     "chroma-js": "^2.4.2",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.3",
