--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "axios": "^1.7.2",
     "chroma-js": "^2.4.2",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.1.6",
     "firebase": "^10.12.3",
     "next": "14.2.5",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "@types/chroma-js": "^2.4.4",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
