--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/chroma-js": "^2.4.4",
